Included R-Tree library in files (lib/). *.html: Added RTree <script> tag. layer.js: Added R-Tree to geometry handling and labeling. map.js: Added flag to regenerate labels on zoom. Changed "box" properties to x,y,w,h. shapefile.js: Added bounding box generation. Added w, h properties to points.

--- a/shp.html
+++ b/shp.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Javascript Shapefile Loader</title>
+<script type="text/javascript" src="lib/rtree.js"></script>
 <script type="text/javascript" src="lib/binaryajax.js"></script>
 <script type="text/javascript" src="src/binarywrapper.js"></script>
 <script type="text/javascript" src="src/shapefile.js"></script>
