--- a/naturalearthdata.html
+++ b/naturalearthdata.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Natural Earth - Javascript Shapefile and DBF Loader</title>
+<script type="text/javascript" src="lib/rtree.js"></script>
 <script type="text/javascript" src="lib/binaryajax.js"></script>
 <script type="text/javascript" src="src/binarywrapper.js"></script>
 <script type="text/javascript" src="src/shapefile.js"></script>
